Bug 264240 - Temporal API should throw TypeErrors for unexpected primitives
Summary: Temporal API should throw TypeErrors for unexpected primitives
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ross Kirsling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-11-05 23:59 PST by Ross Kirsling
Modified: 2023-11-06 03:26 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ross Kirsling 2023-11-05 23:59:40 PST
.
Comment 1 Ross Kirsling 2023-11-06 00:15:56 PST
Pull request: https://github.com/WebKit/WebKit/pull/20027
Comment 2 EWS 2023-11-06 03:25:20 PST
Committed 270262@main (681701c7e39b): <https://commits.webkit.org/270262@main>

Reviewed commits have been landed. Closing PR #20027 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-11-06 03:26:15 PST
<rdar://problem/117992134>